Fixed issues with maps on safari

--- a/art_showcase/static-assets/css/style.css
+++ b/art_showcase/static-assets/css/style.css
@@ -806,9 +806,29 @@ section .hasVideoBackground{
     padding: 0;
     margin: 0;
 }
-.contact_us_right, .single_contactus, .ourmap{
+.contact_us_right, .single_contactus{
     height: 100%;
 }
+
+@media screen and (min-width: 768px) {
+    .ourmap{
+        height: 633px;
+    }
+}
+
+@media screen and (max-width: 768px) and (min-width: 375px) {
+    .ourmap{
+        height: 640px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .ourmap{
+        height: 624px;
+    }
+}
+
+
 
 .carousel{
     height: initial;
